--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "vue-loader": "^15.9.6",
         "vue-template-compiler": "^2.6.10",
         "vuex": "^3.0.1"
+    },
+    "dependencies": {
+        "vue-confirm-dialog": "^1.0.2",
+        "vue-toast-notification": "^0.6.1"
     }
 }
