--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vuex": "^3.0.1"
     },
     "dependencies": {
+        "lodash.get": "^4.4.2",
         "vue-confirm-dialog": "^1.0.2",
         "vue-toast-notification": "^0.6.1"
     }
